<resources>
    <string name="app_name">Bitaqwa</string>
    <string name="text_welcome">Assalamualaikum, Sahabat</string>
    <string name="text_name_pray">Subuh</string>
    <string name="text_time_pray">04:20</string>
    <string name="text_location_pray">Makkah, Arab Saudi</string>
    <string name="text_menu_doa">Doa Doa</string>
    <string name="text_menu_dzikir">Dzikir</string>
    <string name="text_menu_zakat">zakat</string>
    <string name="text_menu_jadwal_sholat">Jadwal\nSholat</string>
    <string name="text_menu_video_kajian">Video\nKajian</string>
    <string name="text_inspirasi">Inspirasi</string>
    <string name="text_jumlah_rupiah">Jumlah Rupiah</string>
    <string name="text_ok">Ok</string>
    <string name="button_4">Button 4</string>
    <string name="button_3">button 3</string>
    <string name="button_2">Button 2</string>
    <string name="button_1">Button 1</string>
    <string name="text_doa_pagi_malam"><![CDATA[Pagi & Malam]]></string>
    <string name="text_rumah">Rumah</string>
    <string name="doa_makanan_minuman"><![CDATA[Makanan & Minuman]]></string>
    <string name="text_doa_perjalanan">Perjalanan</string>
    <string name="text_doa_sholat">Sholat</string>
    <string name="text_doa_etika_baik">Etika Baik</string>
</resources>